<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InventoryMenuScreen">

    <TextView
        android:id="@+id/textViewIInventoryMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/InventoryMenu"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIInventoryStatus"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/InventoryStatus"
        app:layout_constraintEnd_toEndOf="@+id/textViewIInventoryMenu"
        app:layout_constraintStart_toStartOf="@+id/textViewIInventoryMenu"
        app:layout_constraintTop_toBottomOf="@+id/textViewIInventoryMenu" />

    <Button
        android:id="@+id/buttonIInventoryAddItem"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/InventoryAddItem"
        app:layout_constraintEnd_toEndOf="@+id/buttonIInventoryStatus"
        app:layout_constraintStart_toStartOf="@+id/buttonIInventoryStatus"
        app:layout_constraintTop_toBottomOf="@+id/buttonIInventoryStatus" />

    <Button
        android:id="@+id/buttonIInventoryClearItems"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/InventoryClearItems"
        app:layout_constraintEnd_toEndOf="@+id/buttonIInventoryAddItem"
        app:layout_constraintStart_toStartOf="@+id/buttonIInventoryAddItem"
        app:layout_constraintTop_toBottomOf="@+id/buttonIInventoryAddItem" />

    <Button
        android:id="@+id/buttonIInventoryAddTest"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/InventoryAddTestItems"
        app:layout_constraintEnd_toEndOf="@+id/buttonIInventoryClearItems"
        app:layout_constraintStart_toStartOf="@+id/buttonIInventoryClearItems"
        app:layout_constraintTop_toBottomOf="@+id/buttonIInventoryClearItems" />

    <Button
        android:id="@+id/buttonIInventoryLogOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/Logout"
        app:layout_constraintEnd_toEndOf="@+id/buttonIInventoryAddTest"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/buttonIInventoryAddTest"
        app:layout_constraintTop_toBottomOf="@+id/buttonIInventoryAddTest" />
</androidx.constraintlayout.widget.ConstraintLayout>