<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextIUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/Username"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextIPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIUsername" />

    <Button
        android:id="@+id/buttonILogin"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="@+id/editTextIPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextIPassword" />

    <Button
        android:id="@+id/buttonIClear"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Clear"
        app:layout_constraintEnd_toEndOf="@+id/editTextIPassword"
        app:layout_constraintTop_toBottomOf="@+id/buttonILogin" />

    <TextView
        android:id="@+id/textViewILoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/LoginText"
        android:textIsSelectable="false"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>