<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersManageScreen">

    <TextView
        android:id="@+id/textViewIManage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ManageUserScreen"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIViewUsersScreen"
        android:layout_width="244dp"
        android:layout_height="69dp"
        android:layout_marginTop="110dp"
        android:text="@string/ViewUserScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonIAddUserScreen"
        android:layout_width="244sp"
        android:layout_height="69sp"
        android:layout_marginTop="30dp"
        android:text="@string/AddUserScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIViewUsersScreen" />

    <Button
        android:id="@+id/buttonIRemoveUserScreen"
        android:layout_width="244sp"
        android:layout_height="69sp"
        android:layout_marginTop="30dp"
        android:text="@string/RemoveUserScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIAddUserScreen" />

    <Button
        android:id="@+id/buttonILogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonIRemoveUserScreen"
        app:layout_constraintVertical_bias="0.90999997" />

</androidx.constraintlayout.widget.ConstraintLayout>