<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UsersViewScreen">

    <TextView
        android:id="@+id/textViewIView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/ViewUserScreen"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:dividerHeight="5dp"/>

    <ListView
        android:id="@+id/listViewIUserList"
        android:layout_width="175dp"
        android:layout_height="361dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:background="#B4BEF8"
        android:choiceMode="singleChoice"
        android:dividerHeight="5dp"
        android:fadeScrollbars="false"
        android:listSelector="@android:drawable/divider_horizontal_textfield"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewIView" />

    <TextView
        android:id="@+id/textViewIViewUsernameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:text="@string/Username"
        app:layout_constraintStart_toEndOf="@+id/listViewIUserList"
        app:layout_constraintTop_toBottomOf="@+id/textViewIView" />

    <TextView
        android:id="@+id/textViewIViewUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewUsernameLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewUsernameLabel" />

    <TextView
        android:id="@+id/textViewIViewPasswordLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Password"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewUsername"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewUsername" />

    <TextView
        android:id="@+id/textViewIViewPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewPasswordLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewPasswordLabel" />

    <TextView
        android:id="@+id/textViewIViewDOBLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/DOB"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewPassword"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewPassword" />

    <TextView
        android:id="@+id/textViewIViewDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewDOBLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewDOBLabel" />

    <TextView
        android:id="@+id/textViewIViewEIDLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/EID"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewDOB"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewDOB" />

    <TextView
        android:id="@+id/textViewIViewEID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewEIDLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewEIDLabel" />

    <TextView
        android:id="@+id/textViewIViewPhoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/PhoneNum"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewEID"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewEID" />

    <TextView
        android:id="@+id/textViewIViewPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewPhoneLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewPhoneLabel" />

    <TextView
        android:id="@+id/textViewIViewAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/Address"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewPhone"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewPhone" />

    <TextView
        android:id="@+id/textViewIViewAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:maxLines="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewIViewAddressLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewIViewAddressLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>